--- a/MySQL Workbench Queries (Core).ipynb
+++ b/MySQL Workbench Queries (Core).ipynb
@@ -17,20 +17,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e2663945",
+   "cell_type": "markdown",
+   "id": "7a3fc79f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "![png](images/q2.png)"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "075cc7f6",
+   "cell_type": "markdown",
+   "id": "86062df4",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "![png](images/q3.png)"
+   ]
   },
   {
    "cell_type": "code",
