SQL queries screenshots

--- a/MySQL Workbench Queries (Core).ipynb
+++ b/MySQL Workbench Queries (Core).ipynb
@@ -5,7 +5,39 @@
    "id": "6f09e78d",
    "metadata": {},
    "source": [
-    "queries screenshots"
+    "7 queries screenshots in order"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c092f9a0",
+   "metadata": {},
+   "source": [
+    "![png](images/q5.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2d1779a2",
+   "metadata": {},
+   "source": [
+    "![png](images/q6.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac552dce",
+   "metadata": {},
+   "source": [
+    "![png](images/q7.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e88b2a66",
+   "metadata": {},
+   "source": [
+    "![png](images/q8.png)"
    ]
   },
   {
@@ -18,51 +50,27 @@
   },
   {
    "cell_type": "markdown",
+   "id": "17ac0e98",
+   "metadata": {},
+   "source": [
+    "![png](images/q9.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "76c4bee7",
+   "metadata": {},
+   "source": [
+    "![png](images/q10.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7a3fc79f",
    "metadata": {},
    "source": [
     "![png](images/q2.png)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "86062df4",
-   "metadata": {},
-   "source": [
-    "![png](images/q3.png)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d5fb04d4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "125c9e0b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "84a2631f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "46df7be5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
